GCW-3391 fixed Search Organisation page scrollbars

--- a/app/styles/templates/organisations/_search_organisations.scss
+++ b/app/styles/templates/organisations/_search_organisations.scss
@@ -46,3 +46,7 @@
     margin-top: 0;
   }
 }
+
+.organisation-search-overlay .popup-overlay.open {
+  overflow: inherit;
+}
